Again try to fix astronaut animation on ios

--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -51,9 +51,13 @@
   user-select: none;
 }
 
-.login__astronaut--animated {
+.login__astronaut--animating {
   transform: rotateZ(30deg) translate(2000px, -2000px) scale3d(0.2, 0.2, 0.2);
   animation: fly 2s;
+}
+
+.login__astronaut--animated {
+  transform: rotateZ(30deg) translate(2000px, -2000px) scale3d(0.2, 0.2, 0.2) !important;
 }
 
 @media (max-width: 640px) {
@@ -66,14 +70,17 @@
     height: 40vw;
     width: 40vw;
   }
-  .login__astronaut--animated {
+  .login__astronaut--animating {
     transform: rotateZ(30deg) translate(2000px, -1000px) scale3d(0.2, 0.2, 0.2);
     animation: flyMobile 2s;
+  }
+  .login__astronaut--animated {
+    transform: rotateZ(30deg) translate(2000px, -1000px) scale3d(0.2, 0.2, 0.2) !important;
   }
 }
 
 @media (hover: hover) and (min-width: calc(640px + 1px)) {
-  .login__astronaut:hover, .login__button:hover ~ .login__astronaut:not(.login__astronaut--animated) {
+  .login__astronaut:hover, .login__button:hover ~ .login__astronaut:not(.login__astronaut--animating) {
     transform: translate(-50%, -50%) rotateZ(15deg);
   }
   .login__button:hover, .login__button:has(~.login__astronaut:hover) {
